--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,32 +2,31 @@
 /*..................Universal styles.................*/
 html {
   box-sizing: border-box;
-
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
-@media only screen and (max-width: 460px){
-  html{
-/*..   overflow-x: hidden;*/
-
-  }
-}
 
 html {
-  font-family: sans-serif;
   font-size: 16px;
   margin: 0 auto;
 }
 
+body p {
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+}
+
+body h1, h2, h3{
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 16px;
+}
 
 .banner {
-
   background-color: lightgrey;
   padding-top: 4rem;
 }
-.
-
 
 
 /* .....header position and styles for desktop....*/
@@ -41,7 +40,6 @@ header {
   border-bottom: solid 1px grey;
   align-items: center;
   background-color: white;
-  opacity: 0.6;  /*...for construction purposes only....*/
 }
 
 header {
@@ -52,7 +50,6 @@ header {
   border-bottom: solid 1px grey;
   align-items: center;
   background-color: white;
-  opacity: 0.6;  /*...for construction purposes only....*/
 }
 
 header .content {
@@ -82,6 +79,8 @@ header nav ul {
 }
 
 nav a {
+  font-family: 'Ubunru', sans-serif;
+  font-weight: bold;
   vertical-align: bottom;
   font-size: 1rem;
   padding: 0.5rem;
@@ -93,15 +92,14 @@ nav a {
   padding-right: 1rem;
 }
 
-
 header .mobile {
   display: none;
 }
 
-/*..........header position and styles for mobile..............*/
+/*..........header position and styles for mobile.......................*/
 
 
-@media only screen and (max-width: 460px){
+@media only screen and (max-width: 1024px){
   header {
     position: fixed;
     z-index: 1;
@@ -110,15 +108,14 @@ header .mobile {
     border-bottom: solid 1px grey;
     align-items: center;
     background-color: white;
-    opacity: 0.6;  /*...for construction purposes only....*/
   }
- .desktop{
+
+
+.desktop,.logo{
   display: none;
 }
- .logo {
-  display: none;
-}
- span{
+
+span{
   display: none;
 }
 
@@ -158,76 +155,60 @@ header .mobile {
   padding: 0rem;
   margin: 0rem;
   }
-}
+}/*.....closing tag media....*/
 
-/*....................mainContent......................................*/
 
-.bannermobile {
+/*....................banner desktop.....................................*/
+
+.bannermobile,.wordsmobile {
   display: none
 }
-.wordsmobile {
-  display: none;
-}
+
 .banner {
   display: flex;
   width: 100%;
   height: 45rem;
-
+  padding-bottom: 1rem;
 }
-.girlsContainer{    /*.....checking.....*/
+
+.girlsContainer{
   width: 60%;
   height: auto;
   margin-bottom: 1rem;
-
-
-}
-/*...
-.girlsContainer .girls .pic{ /*............this.....*/
-  display: block;
-/*  overflow-x: hidden; ..*/
-/*  width: auto;...*/
 }
 
 .girls {
   width: 100%;
   height: 95.5%;
-
   margin-right: 1.5rem;
-  margin-left: 1.5rem;
   margin-bottom: 3rem;
-
- background-image: url("../images/bookGirls.jpg");
- background-size: cover;
- background-position: center;
- background-repeat: no-repeat;
-}...*/
-/*...girls {
-  display: flex;
-  background-image: url("..image/bookGirls.jpg");
   background-size: cover;
-  margin: 1.5rem 1rem 1.5rem 1.5rem;
-
-}  ...*/
-
+  background-repeat: no-repeat;
+}
 
 .desk{
   max-width: 100%;
   max-height: 100%;
-
-
 }
+
+.desk{
+  padding-bottom: -1rem;
+  margin-bottom: -1rem;
+}
+
 .girls {
   width: 100%;
   height: 100%;
-  opacity:0.5;
   overflow: hidden;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
-
-
+  padding-bottom: -1rem;
+  margin-bottom: -1rem;
 }
 
-
+.girls img{
+  padding-bottom: -1rem;
+}
 
 .words {
   display: flex;
@@ -239,12 +220,14 @@ header .mobile {
 .banner .words {
   width: 40%;
 }
+
 .words {
   width: 40%;
-/*.  overflow-x: hidden; /*....checking...*/
 }
 
 .words h1 {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
   font-size: 3rem;
   font-weight: bold;
   padding: 6rem 1rem 3rem 1rem;
@@ -263,6 +246,8 @@ header .mobile {
 }
 
 .banner a  {
+  font-family: 'Ubunru', sans-serif;
+  font-weight: bold;
   font-size: 1.3rem;
   text-align: center;
   border: 1px solid grey;
@@ -278,81 +263,83 @@ header .mobile {
   background-color: red;
  }
 
- /*...mobile ..........*/
+ /*...................banner mobile ..............................*/
 
-@media only screen and (max-width: 460px){
-  .banner {
-    display: none;
-  }
-  .words {
-    display: none;
-  }
-  .girls {
+@media only screen and (max-width: 1024px){
+  .banner,.words,.girls {
     display: none;
   }
 
-  .bannermobile {
-    display: block;
-    position: relative;
-    width: 100%;
-    flex-direction: column;
-    top: 4rem;
-    background-color: lightgrey;
-    margin-bottom: 100px;
-    padding-bottom: 1rem;
-  }
+.bannermobile {
+  display: block;
+  position: relative;
+  width: 100%;
+  flex-direction: column;
+  top: 4rem;
+  background-color: lightgrey;
+  margin-bottom: 100px;
+  padding-bottom: 1rem;
+}
 
-  .imgmobile {
-    width: 100%;
-    height: 0%;
-    height: auto;  /*....check....*/
-    opacity:0.2;
-  }
-  .mob {
-    max-width: 100%;
-    max-width: 100%;
-  }
+.imgmobile {
+  width: 100%;
+  height: 0%;
+  height: auto;
+}
 
-  .bannermobile h1 {
-    text-align: left;
-    white-space: nowrap;
-    padding-top: 2rem;
-  }
+.mob {
+  max-width: 100%;
+  max-width: 100%;
+}
+
+.bannermobile h1 {
+  text-align: left;
+  white-space: nowrap;
+  padding-top: 2rem;
+}
+
 .mobilewords{
   background-color: lightgrey;
-
 }
+
 .mobilewords .mobH1 {
-    width: 100%;
-    font-size: 2.5rem;
-    font-weight: bold;
-    padding: 2rem 1rem 2rem 1rem;
-    padding-right: 2rem;
-    white-space: normal;
-    overflow: hidden;
-  }
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bolder;
+  width: 100%;
+  font-size: 2.5rem;
+  padding: 2rem 1rem 2rem 1rem;
+  padding-right: 2rem;
+  white-space: normal;
+  overflow: hidden;
+}
 
 .mobilewords .mobP {
-    display: flex;
-    font-size: 1.5rem;
-    text-align: left;
-    padding: 0rem  0rem 1.5rem 1.5rem;
-    overflow: hidden;
-  }
+  font-family:
+  display: flex;
+  font-size: 1.5rem;
+  text-align: left;
+  padding: 0rem  0rem 1.5rem 1.5rem;
+  overflow: hidden;
+}
+
 .linkmobile{
   text-align: center;
   padding-bottom: 2rem;
   padding-top: 2rem;
 }
+
 .linkmobile ul{
   width: 100%;
 }
+
 .linkmobile li{
   margin: 1rem;
   list-style: none;
-
 }
+
 .linkmobile a{
+  font-family: 'Ubunru', sans-serif;
+  font-weight: bold;
   font-size: 1.2rem;
   white-space: nowrap;
   background-color: grey;
@@ -369,121 +356,22 @@ header .mobile {
   background-color: red;
 }
 
-
-.UppermidContainer{
-  display: none;
-}
-.Uppermiddesktop{
-  display: none;
-}
-.Uppermiddesktop{
-  display: none;
-}
-.trouble{
-  display: none;
-}
-.troubleimage{
-  display: none;
-}
-.Uppermidside{
-  display: none;
-  border-left: 1px solid lightgrey;
-}
- .container{
-   display: none;
- }
- .writting{
-   display: none;
- }
- .text{
-   display: none;
- }
- .img{
-   display: none;
- }
- #grey{
-   display: none;
- }
- .learning{
-   display: none;
- }
- .color{
-   display: none;
- }
- .learnContainer{
-   display: none;
- }
- .learnbox{
-   display: none;
- }
- .image1{
-   display: none;
- }
- .para{
-   display: none;
- }
-.image2{
-  display: none;
-}
-.image3{
-  display: none;
-}
-.image4{
-  display: none;
-}
-.image5{
-  display: none;
-}
-.image6{
-  display: none;
-}
-.videoContainer{
-  display: none;
-}
-.vidContainer{
-  display: none;
-}
-.video{
-  display: none;
-}
-.vidTxt{
-  display: none;
-}
-.videoSidebar{
-  display: none;
-}
-.vidsideContainer{
-  display: none;
-}
-.pictures{
-  display: none;
-}
-.txt{
-  display: none;
-}
-.foot{
-  display: none;
-}
-.square{
-  display: none;
-}
-.reserved{
-  display: none;
-}
-.rectangle{
-  display: none;
-}
-.videoContainer h1{
-  display: none;
-}
-.videoContainer{
+.UppermidContainer,.Uppermiddesktop,.Uppermiddesktop,
+.trouble,.troubleimage,.Uppermidside,.Uppermidside,
+.container, .writting,.text,.img,#grey,.learning,
+.color,.learnContainer,.learnbox,.image1,.para,
+.image2,.image3,.image4,.image5,.image6,
+.videoContainer,.vidContainer,.video,
+.vidTxt,.videoSidebar,.vidsideContainer,
+.pictures,.txt,.foot,.square,.reserved,
+.rectangle,.videoContainer h1,
+.videoContainer,#grey .container {
   display: none;
 }
 
+ /*.....................Uppermid mobile .........................*/
 
- /*.....................Uppermid mobile section...........*/
-
- .UppermidMobile {
+.UppermidMobile {
   display: block;
   position: relative;
   bottom: 42rem;
@@ -494,16 +382,17 @@ header .mobile {
 .mobileContainer {
   display: block;
   width: 100%;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
 .UppermidMobile img{
-    width:100%;
-  /*  padding-right: 1rem;
-    margin-right: 1rem;...*/
+  width:100%;
+  margin-right: 1rem;
 }
 
 .mobileContainer{
-  padding: 0rem 1rem 3rem 1rem;
+  padding: 0rem 1rem 0rem 1rem;
 }
 
 .info {
@@ -511,6 +400,8 @@ header .mobile {
 }
 
 .info .mobileH3{
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
   font-size: 1.75rem;
   font-weight: 700;
   padding-top: 2rem;
@@ -518,26 +409,44 @@ header .mobile {
 }
 
 .info p{
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal;
   font-size: 1.1rem;
   padding-bottom: 1rem;
 }
 
  .at{
+   font-family: 'Ubuntu', sans-serif;
+   font-weight: normal;
   text-decoration: none;
   margin-top: 2rem;
 }
 
 /*................Lowermid mobile section......................*/
 
+
+@media only screen and (max-width: 1024px){
+  .Lowermid {
+    display: block;
+    position: relative;
+    bottom: 40rem;
+  }
+
+.learning{
+  display: none;
+}
+}/*...closing tag media...*/
+
 .Lowermid {
   display: block;
-  position: absolute;
-/*  top: 2200px;*/
-  top: 120rem;
+  position: relative;
   margin-top:2rem;
+  bottom: 40rem;
 }
 
 .Lowermid h1{
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
   text-align: center;
   font-size: 3rem;
 }
@@ -565,8 +474,22 @@ header .mobile {
   padding: 1rem 2rem 1.5rem 1rem;
 }
 
-/*....................video thesis......................*/
+/*....................video thesis mobile.....................*/
 
+
+@media only screen and (min-width:1025px){
+  .learning,.square {
+    display: none;
+  }
+  {
+    display: none;
+  }
+}/*..closinf tag media..*/
+
+.thesisContainer{
+ display: block;
+ padding-bottom: -40rem;
+}
 .thesis h1{
   margin-top: 2rem;
   padding-top: 3rem;
@@ -579,10 +502,9 @@ header .mobile {
   justify-content: center;
   align-items: center;
   padding-left: 1rem;
-
 }
 
-/*................footer................................*/
+/*................footer mobile................................*/
 
 .rights p{
   text-align: left;
@@ -590,55 +512,34 @@ header .mobile {
   padding: 1rem 0rem 1rem 2rem;
   bottom: -150rem;
 }
+} /*...closing tag media ....... important...*/
 
 
-} /*....media tag ........*/ /*...very important...*/
-
-
-@media only screen and (min-width: 760px){
-  .UppermidMobile img{
+@media only screen and (min-width: 1025px){
+  .UppermidMobile img,.UppermidMobile,.mobileContainer,
+  .imgmob,.info,.mobileH3,.mobileP,.Lowermid{
     display: none;
   }
-  .UppermidMobile{
-    display: none;
-  }
-.mobileContainer{
-  display: none;
-}
-.imgmob{
-  display: none;
-}
-.info{
-  display: none;
-}
-.mobileH3{
-  display: none;
-}
-.mobileP{
-  display: none;
-}
-.Lowermid{
-  display: none;
-}
+} /*....closing media tag....*/
 
-} /*....very important media tag....*/
+
 /*..................Uppermid section  desktop version.....................*/
 
 
 .UppermidContainer {
   display: flex;
   width: 100%;
-  height: 42rem;
-
+  height: 40rem;
+  margin-bottom: -2rem;
 }
 
 .Uppermiddesktop {
-    display: flex;
-    width: 60%;
-    height: 42rem;
-    flex-direction: column;
-    float: left;
-    padding-bottom: 2rem;
+  display: flex;
+  width: 60%;
+  height: 42rem;
+  flex-direction: column;
+  float: left;
+  padding-bottom: 2rem;
 }
 
 .trouble{
@@ -650,30 +551,29 @@ header .mobile {
   background-size: cover;
   background-repeat: no-repeat;
 }
-                                 /*...trouble...*/
+
 .troubleimage{
   max-width: 100%;
   max-height: 100%;
 }
 
-
 .Uppermidside {
-    display: flex;
-    width: 39.9%;
-    height: 39rem;
-    flex-direction: column;
-    float: right;
-    padding-top: 1rem;
-    border-left: 1px solid lightgrey;
-    padding-bottom: 4rem;
+  display: flex;
+  width: 39.9%;
+  height: 40rem;
+  flex-direction: column;
+  float: right;
+  padding-top: 1rem;
+  border-left: 1px solid lightgrey;
+  padding-bottom: 4rem;
 }
 
- .container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    padding: 1rem 0rem 1rem 0rem;
-    border-bottom: 1px solid lightgrey;
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 1rem 0rem 1rem 0rem;
+  border-bottom: 1px solid lightgrey;
 }
 
 .container:last-child  {
@@ -696,41 +596,48 @@ header .mobile {
   height: auto;
   padding-left: 1rem;
 }
+
 .writting h3{
   font-size: 1.5rem;
   font-weight: bolder;
   padding-top: 2rem;
   padding-bottom: 0.5rem;
 }
+
 .writting p{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+
 .writting a{
   padding-top: 1rem;
   text-decoration: none;
 }
 
- .text{
-   max-width: 100%;
-   padding-left: 1.5rem;
-   padding-right: 2rem;
+.text{
+  max-width: 100%;
+  padding-left: 1.5rem;
+  padding-right: 2rem;
+}
 
- }
  .text h2{
    font-size: 2.5rem;
    font-weight: bolder;
    padding-bottom: 1.5rem;
- }
- .text p{
+}
+
+.text p{
    font-size: 1.1rem;
 }
+
 .text h4{
   font-size: 1.1rem;
   padding-top: 1.5rem;
   padding-bottom: 2rem;
 }
-/*.............................learning................*/
+
+
+/*.............................learning desktop...............*/
 
 .learning{
   display: block;
@@ -738,31 +645,32 @@ header .mobile {
   height: 49rem;
   padding-top: 0rem;
   margin-top: 2rem;
-
 }
 
 .color{
   width: 100%;
   padding-bottom: 1.5rem;
   background-color: lightgrey;
+
 }
+
 .color h1{
   text-align: center;
   font-size: 3rem;
   font-weight: bolder;
   padding-top: 3rem;
   padding-bottom: 2rem;
-
 }
+
 .learnContainer {
   display: inline-flex;
   padding-left: 4.5rem;
   padding-right: 4.5rem;
-  flex-wrap: wrap;  /*..testing...*/
+  flex-wrap: wrap;
   justify-content: center;
-  overflow: hidden;  /*..testing...*/
-
+  overflow: hidden;
 }
+
 .learnbox{
   display: flex;
   flex-direction: column;
@@ -781,6 +689,7 @@ header .mobile {
   background-repeat: no-repeat;
   margin-bottom: -1rem;
 }
+
 .image2{
   height: 50%;
   background-image: url("../images/mobile.jpg");
@@ -789,6 +698,7 @@ header .mobile {
   background-repeat: no-repeat;
   margin-bottom: -1rem;
 }
+
 .image3{
   height: 50%;
   background-image: url("../images/vintageCamera.jpg");
@@ -797,6 +707,7 @@ header .mobile {
   background-repeat: no-repeat;
   margin-bottom: -1rem;
 }
+
 .image4{
   height: 50%;
   background-image: url("../images/laptop.jpg");
@@ -805,6 +716,7 @@ header .mobile {
   background-repeat: no-repeat;
   margin-bottom: -1rem;
 }
+
 .image5{
   height: 50%;
   background-image: url("../images/chess.jpg");
@@ -813,6 +725,7 @@ header .mobile {
   background-repeat: no-repeat;
   margin-bottom: -1rem;
 }
+
 .image6{
   height: 50%;
   background-image: url("../images/appleWatch.jpg");
@@ -821,15 +734,17 @@ header .mobile {
   background-repeat: no-repeat;
   margin-bottom: -1rem;
 }
-.image {
 
+.image {
   height: 50%;
   width: auto;
 }
+
 .learnimage{
   max-height: 100%;
   max-width: 100%;
 }
+
 .para {
   height: 50%;
   width: auto;
@@ -837,16 +752,19 @@ header .mobile {
   margin-top: -1rem;
   bottom: 1rem;
 }
+
 .para h3{
   font-size: 1.5rem;
   font-weight: bolder;
   padding: 1rem 0rem 1rem 1rem;
 }
+
 .para h4{
   font-size: 1.2rem;
   font-weight: lighter;;
   padding: 0.5rem 0rem 0.5rem 1rem;
 }
+
 .para p{
   font-size: 1rem;
   font-weight: lighter;
@@ -854,15 +772,15 @@ header .mobile {
   padding-top: 1rem;
 }
 
-/*.................................video............................*/
+/*.................................video desktop............................*/
 
 .videoContainer{
   display: block;
-  margin-top: 14.5rem;  /*...px....232...*/
+  margin-top: 14.5rem;
   width: 100%;
   height: 43rem;
-
 }
+
 .videoContainer h1{
   font-size: 2.5rem;
   font-weight: bold;
@@ -883,12 +801,14 @@ header .mobile {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+
 .vidTxt h2{
   font-size: 2rem;
   font-weight: bold;
   padding-top: 1.5rem;
   padding-bottom: 0.5rem;
 }
+
 .vidTxt p{
   font-size: 1rem;
   padding-bottom: 2rem;
@@ -901,41 +821,44 @@ header .mobile {
   margin-bottom: 1rem;
   float: right;
 }
+
 .vidsideContainer{
   display: flex;
   flex-direction: row;
   width: 100%;
   height: auto;
 }
+
 .vidsideContainer:first-child{
   background-color: lightgrey;
 }
-.txt{
 
-}
 .txt h3{
   font-size: 1.5rem;
   font-weight: bold;
   padding-top: 3rem;
   padding-bottom: 1rem;
 }
+
 .txt p{
   font-size: 1rem;
   font-weight: lighter;
   line-height: 1.5rem;
   padding-bottom: 1.5rem;
 }
+
 .pictures{
   width: 35%;
   height: auto;
   padding: 1rem 1rem 1rem 1rem;
 }
+
 .picturesvid{
   max-width: 100%;
   max-height: 100%;
 }
 
-/*......................footer........................*/
+/*......................footer desktop........................*/
 
 .foot{
   display: block;
@@ -944,7 +867,8 @@ header .mobile {
 
   margin-top: 6.25rem;  /*...100px...*/
 }
-.square{display: block;
+.square{
+  display: block;
   width: 100%;
   height: 6.25rem;  /*...100px..*/
   border-top: 1px solid lightgrey;
@@ -969,5 +893,4 @@ header .mobile {
   padding-right: 1.5rem;
   margin-top: -2rem;
   font-size: 0.8rem;
-
 }
